exports[`applyFilter filters a list of courses 1`] = `
Array [
  Object {
    "department": Array [
      "CSCI",
    ],
    "number": 121,
  },
  Object {
    "department": Array [
      "ART",
      "ASIAN",
    ],
    "number": 121,
  },
]
`;

exports[`applyFilter filters by list-of-valid-courses queries 1`] = `
Array [
  Object {
    "$type": "course",
    "department": Array [
      "CSCI",
    ],
    "number": 121,
  },
]
`;

exports[`applyFilter filters by where-style queries 1`] = `
Array [
  Object {
    "department": Array [
      "CSCI",
    ],
    "number": 121,
  },
  Object {
    "department": Array [
      "ART",
      "ASIAN",
    ],
    "number": 121,
  },
]
`;

exports[`applyFilter returns an empty list when not presented with a filter 1`] = `Array []`;

exports[`applyFilter returns the matches on the expression 1`] = `
Array [
  Object {
    "department": Array [
      "CSCI",
    ],
    "number": 121,
  },
  Object {
    "department": Array [
      "ART",
      "ASIAN",
    ],
    "number": 121,
  },
]
`;

exports[`applyFilter returns the matches on the expression 2`] = `
Array [
  Object {
    "department": Array [
      "CSCI",
    ],
    "number": 121,
  },
  Object {
    "department": Array [
      "ART",
      "ASIAN",
    ],
    "number": 121,
  },
]
`;
